external domain gds.example

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -87,7 +87,7 @@ http {
     #FlexBook Manager
     server {
       listen 80;
-      server_name mgr.flxb.local;
+      server_name mgr.gds.example;
       location / {
         proxy_pass http://mgr.flxb.local;
       }
@@ -105,7 +105,7 @@ http {
     server {
       listen 80;
       resolver 127.0.0.1;
-      server_name ~^(?<subdomain>[\w-]+)\.provider\.flxb\.local$;
+      server_name ~^(?<subdomain>[\w-]+)\.provider\.gds\.example$;
 
       location / {
         proxy_pass http://$subdomain.provider.flxb.local;
